[gd_scene load_steps=5 format=3 uid="uid://bjrido4tn0mpu"]

[ext_resource type="Script" path="res://characters/player/player.gd" id="1_22f01"]
[ext_resource type="Texture2D" uid="uid://btlsd8f4vno7w" path="res://_dev/art/dev_player.png" id="2_nd5hl"]
[ext_resource type="PackedScene" uid="uid://cjvu6egrx3dx1" path="res://components/weapon_component.tscn" id="4_3pkde"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvhi0"]
size = Vector2(8, 14)

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_22f01")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wvhi0")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_nd5hl")

[node name="Timers" type="Node" parent="."]

[node name="HungerTimer" type="Timer" parent="Timers"]
wait_time = 15.0
one_shot = true
autostart = true

[node name="ThirstTimer" type="Timer" parent="Timers"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="WeaponComponent" parent="." instance=ExtResource("4_3pkde")]
position = Vector2(0, 2)

[connection signal="timeout" from="Timers/HungerTimer" to="." method="_on_hunger_timer_timeout"]
[connection signal="timeout" from="Timers/ThirstTimer" to="." method="_on_thirst_timer_timeout"]
